@@ -1875,6 +1875,14 @@ Result:
         [/label]
     [/event]
 
+    [event]
+        name=prestart
+        [label]
+            x,y=2,14
+            text="Shrouded label"
+            visible_in_shroud=yes
+        [/label]
+    [/event]
 #define DYNAMIC_EVENT_SETUP TYPE VAR
     [set_variables]
         name={VAR}
